fix alignment of coursework

--- a/style/style.css
+++ b/style/style.css
@@ -250,6 +250,8 @@ section {
     align-items: center;
     text-align: left;
     padding: 1em;
+    margin: auto;
+    width: 90%;
 }
 
     .semester ul li {
